# emulation-simulation

./: CMakeLists.txt  app.py  config.json  main.py  package-lock.json  readme.md  rest.np.npy  setup.py  test_vis_main.py  testing_dev.ipynb
cpp/bindings/: emulator_bindings.cpp
cpp/include/: base_emulator.hpp  chip8_emulator.hpp
cpp/src/: chip8_emulator.cpp
examples/: demo_ai_simulation.py  demo_chip8.py
experiments/: experiment_20240714_063440.json  experiment_20240714_233027.json  experiment_20240714_233158.json  experiment_20240714_233247.json  experiment_20240714_233302.json  experiment_20240714_233512.json  experiment_20240714_233555.json  experiment_20240714_233622.json  experiment_20240714_233732.json  experiment_20240714_233801.json  experiment_20240714_233835.json  experiment_20240714_233944.json
experiments/20240714-235006/: metrics.json
experiments/20240714-235035/: metrics.json
experiments/20240714-235305/: metrics.json
experiments/20240714-235359/: metrics.json
experiments/20240714-235610/: metrics.json
experiments/20240714-235833/: metrics.json
experiments/20240714-235931/: metrics.json
experiments/20240715-000140/: metrics.json
experiments/20240715-000247/: metrics.json
experiments/20240715-002750/: metrics.json
experiments/20240715-002811/: metrics.json
experiments/20240715-002835/: metrics.json
experiments/20240715-003007/: artifacts.json  metrics.json
experiments/20240715-010002/: metrics.json
experiments/20240715-010016/: metrics.json
models/: simple_cnn_20240714_063440.pth  simple_cnn_20240714_233027.pth  simple_cnn_20240714_233158.pth  simple_cnn_20240714_233247.pth  simple_cnn_20240714_233302.pth  simple_cnn_20240714_233512.pth  simple_cnn_20240714_233555.pth  simple_cnn_20240714_233622.pth  simple_cnn_20240714_233732.pth  simple_cnn_20240714_233801.pth  simple_cnn_20240714_233835.pth  simple_cnn_20240714_233944.pth
src/data/: capture.py  (+1 more)
templates/: index.html
tests/: CMakeLists.txt  test_chip8_emulator.cpp
uploads/: simple_cnn_20240715-003007.pth
(+44 files in other folders)
